<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menuOpciones"
        android:title="Opciones"
        android:orderInCategory="100"
        app:showAsAction="always"
        android:enabled="false"
        android:icon="@drawable/ic_baseline_menu_24"/>

    <item
        android:id="@+id/menuHome"
        android:title="Inicio"
        android:orderInCategory="101"/>

    <item
        android:id="@+id/menuAnuncios"
        android:title="@string/menu_anuncios"
        android:orderInCategory="102"/>

    <item
        android:id="@+id/menuPostulaciones"
        android:title="@string/menu_postulaciones"
        android:orderInCategory="103"/>

    <item
        android:id="@+id/menuVinculos"
        android:title="@string/menu_vinculos"
        android:orderInCategory="104"/>

    <item
        android:id="@+id/menuMensajes"
        android:title="@string/menu_mensajes"
        android:orderInCategory="105"/>


</menu>